# ulinzi_assess

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fine-tune-bert-based-financial-sentiment-classifer.ipynb  pyproject.toml
backend/: config.py  main.py  models.py  prediction_service.py  schemas.py  service_dependency.py  utils.py
tests/: test_api.py
